force-app/main/default/objects/Placement__c/fields/Weekend_Evening_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Weekend_Evening_Pay_Rate__c</fullName>
    <label>Weekend Evening Pay Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>