force-app/main/default/objects/Placement__c/fields/Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Hours__c</fullName>
    <label>Weekly Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>