force-app/main/default/objects/Placement__c/fields/Work_Week__c.field-meta.xml
<CustomField>
    <fullName>Work_Week__c</fullName>
    <formula>TEXT( Account__r.Work_Week__c)</formula>
    <label>Work Week</label>
    <type>Text</type>
</CustomField>