force-app/main/default/objects/Placement__c/recordTypes/Corporate_Placement.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Placement</fullName>
    <active>true</active>
    <label>Corporate Placement</label>
</RecordType>