force-app/main/default/objects/Placement__c/recordTypes/Placement.recordType-meta.xml
<RecordType>
    <fullName>Placement</fullName>
    <active>true</active>
    <description>Healthcare Recruitment</description>
    <label>Placement</label>
</RecordType>