force-app/main/default/objects/Placement__c/recordTypes/Staffing_Placement.recordType-meta.xml
<RecordType>
    <fullName>Staffing_Placement</fullName>
    <active>true</active>
    <label>Staffing Placement</label>
</RecordType>