force-app/main/default/objects/Placement__c/validationRules/CandidateStatusDNU.validationRule-meta.xml
<ValidationRule>
    <fullName>CandidateStatusDNU</fullName>
    <active>true</active>
    <description>When the Candidate Status set to “Do Not Use.” Prevents creating placement</description>
    <errorConditionFormula>TEXT( Candidate__r.Candidate_Status__c)=&apos;Do Not Use&apos;</errorConditionFormula>
    <errorMessage>DNU candidates cannot have Placement. Please reach out to Director of Credentialing and Compliance.</errorMessage>
</ValidationRule>