force-app/main/default/objects/Placement__c/validationRules/Cannot_update_Placement_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_update_Placement_1</fullName>
    <active>true</active>
    <description>Placement is in a “Pending Confirmation” status and Client Offer Letter is &quot;Centra client&quot;, and at the same time, no Hiring Manager has been assigned. Displays validation message</description>
    <errorConditionFormula>TEXT(Placement_Status__c) = &apos;Pending Confirmation&apos; &amp;&amp; TEXT(  Account__r.Client_Offer_Letter__c ) = &apos;Centra Client Conf&apos; &amp;&amp; Hiring_Manager__c = NULL</errorConditionFormula>
    <errorMessage>Hiring Manager Required for Offer Letter Distribution. Please update on Job and Placement</errorMessage>
</ValidationRule>