force-app/main/default/objects/Placement__c/validationRules/Confirming_Placement_Requires_Rates.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirming_Placement_Requires_Rates</fullName>
    <active>false</active>
    <description>Placement cannot be Confirmed with missing or zero Bill/Pay rates. Please ensure the Job rates have flowed down correctly.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Confirmed&quot;),
    OR(
        Regular_Bill_Rate__c &lt;= 0,
        Regular_Pay_Rate__c &lt;= 0,
        ISBLANK(Regular_Bill_Rate__c),
        ISBLANK(Regular_Pay_Rate__c)
    )
)</errorConditionFormula>
    <errorMessage>Placement cannot be Confirmed with missing or zero Bill/Pay rates. Please ensure the Job rates have flowed down correctly.</errorMessage>
</ValidationRule>