force-app/main/default/objects/Placement__c/validationRules/Placement_Requires_Project_for_Finance.validationRule-meta.xml
<ValidationRule>
    <fullName>Placement_Requires_Project_for_Finance</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISNEW() || ISCHANGED(Status__c),
    ISPICKVAL(Status__c, &quot;Confirmed&quot;),
    ISBLANK(Current_Project__c)
)</errorConditionFormula>
    <errorMessage>A Project must be assigned to this Placement before it can be Confirmed. The Deal Sheet and Payroll systems require a linked Project.</errorMessage>
</ValidationRule>