force-app/main/default/objects/Placement__c/validationRules/Prevent_Placement_Before_Offer.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Placement_Before_Offer</fullName>
    <active>false</active>
    <description>Prevents Placement creation unless Job Applicant has reached Offer stage.</description>
    <errorConditionFormula>AND(
  ISNEW(),
  NOT(
    OR(
      ISPICKVAL(Job_Applicant__r.Stage__c, &quot;Offer&quot;),
      ISPICKVAL(Job_Applicant__r.Stage__c, &quot;Placement&quot;)
    )
  )
)</errorConditionFormula>
    <errorMessage>CRITICAL: You cannot create a Placement. The Job Applicant must be in the &apos;Offer&apos; stage first.</errorMessage>
</ValidationRule>