force-app/main/default/objects/Placement__c/validationRules/QB_Account_number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>QB_Account_number_Required</fullName>
    <active>false</active>
    <description>When Backoffice Approval Status = Approved and any of QB_Account_Name__c, Project_Template__c,Job__r.Job_Division__c, Shift__c, or Onboarding_Package__c is blank. Displays validation message</description>
    <errorConditionFormula>Text( Backoffice_Approval_Status__c ) = &apos;Approved&apos; &amp;&amp; (QB_Account_Name__c = Null ||Project_Template__c = Null ||   TEXT( Job__r.Job_Division__c )  = Null || Shift__c =Null ||  Onboarding_Package__c = Null)</errorConditionFormula>
    <errorMessage>QB Account Name, Project Template, Shift, Division, Onboarding Package Fields are Required if Back Office Status = Approved</errorMessage>
</ValidationRule>