force-app/main/default/objects/Placement__c/validationRules/Start_Date_and_End_Date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_and_End_Date_validation</fullName>
    <active>true</active>
    <description>Start Date cannot be greater than End Date.</description>
    <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
    <errorMessage>End Date can&apos;t be less than Start Date</errorMessage>
</ValidationRule>