force-app/main/default/objects/Placement__c/listViews/Closed_Placements.listView-meta.xml
<ListView>
    <fullName>Closed_Placements</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Client__c</columns>
    <columns>Job__c</columns>
    <columns>Status__c</columns>
    <columns>Placement_Converted_Date__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Active,On Hold,Pending Approval</value>
    </filters>
    <label>Closed Placements</label>
</ListView>